daytrader-gatewayapp/daytrader-gateway/env/external/k8s/daytrader-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: daytrader-gateway
  name: daytrader-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daytrader-gateway
  template:
    metadata:
      labels:
        app: daytrader-gateway
    spec:
      containers:
      - name: daytrader-gateway
        image: dhvines/daytrader-gateway:4.0.17
        imagePullPolicy: Always
        ports:
        - containerPort: 2443
          protocol: TCP
        readinessProbe:  
          httpGet:
            path: /health
            scheme: HTTPS
            port: 2443
        livenessProbe:  
          httpGet:
            path: /health
            scheme: HTTPS
            port: 2443
