daytrader-gatewayapp/daytrader-gateway/env/external/k8s/daytrader-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daytrader-gateway
  name: daytrader-gateway
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 2443
  selector:
    app: daytrader-gateway
  sessionAffinity: None
  type: NodePort
